--- a/css/main.css
+++ b/css/main.css
@@ -34,6 +34,14 @@ h3 {
 }
 
 /*INDEX.HTML*/
+.center #choose {
+  background-image: url(coffee.jpg);
+  height: 600;
+  width: 900px;
+  border: 1px solid black;
+  align-self: center;
+  margin: auto;
+}
 
 #mycanvas {
     position: relative;
